--- a/pages/services.html
+++ b/pages/services.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Diseño Gráfico, Folletos, Volantes, Carteles, Vallas publicitarias, Revistas, Libros, Packaging, Etiquetas, Ilustraciones, Personalizadas, Diseño de Logotipos, Rebranding, Identidad de Marca, Guías de estilo, Paleta de colores, Tipografías, Iconografía, Patrones, Tonos de comunicación, Voz de marca, Diseño de Sitios Web, Responsivos, Estáticos, Dinámicos, Adaptados a móviles, Comercio electrónico, Landing pages, Micrositios,Desarrollo Web, Programación , Codificación, Funcionalidades personalizadas, Optimización del rendimiento, Integración de APIs, Mantenimiento , Actualización continua, Diseño de Aplicaciones Móviles, Interfaces de usuario (UI), Prototipos, Wireframes, Iconos, Experiencias de usuario (UX), Pruebas de usabilidad, Optimización, Diseño de Interfaces de Usuario (UI), Diseños, intuitivos, Elementos de navegación,  Estructura de información, Prototipado, Implementación de principios de diseño
+    <meta name="keywords"
+        content="Diseño Gráfico, Folletos, Volantes, Carteles, Vallas publicitarias, Revistas, Libros, Packaging, Etiquetas, Ilustraciones, Personalizadas, Diseño de Logotipos, Rebranding, Identidad de Marca, Guías de estilo, Paleta de colores, Tipografías, Iconografía, Patrones, Tonos de comunicación, Voz de marca, Diseño de Sitios Web, Responsivos, Estáticos, Dinámicos, Adaptados a móviles, Comercio electrónico, Landing pages, Micrositios,Desarrollo Web, Programación , Codificación, Funcionalidades personalizadas, Optimización del rendimiento, Integración de APIs, Mantenimiento , Actualización continua, Diseño de Aplicaciones Móviles, Interfaces de usuario (UI), Prototipos, Wireframes, Iconos, Experiencias de usuario (UX), Pruebas de usabilidad, Optimización, Diseño de Interfaces de Usuario (UI), Diseños, intuitivos, Elementos de navegación,  Estructura de información, Prototipado, Implementación de principios de diseño
     Diseño de Experiencia de Usuario (UX), Investigación de usuarios, Mapas de experiencia, Arquitectura de la, información, Evaluación de la usabilidad, Iteración, Mejora continua">
     <!--link boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>AV-servicios</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -48,7 +50,7 @@
     <main>
         <section class=" container pt-3 mt-5">
             <div class=" service_info row justify-conter-center align-items-center text-center">
-                <div class="col mt-3">
+                <div class=" animate__animated animate__fadeInLeft col mt-3">
                     <h1> Conoce nuestros servicios</h1>
                     <p>En AV creativos, ofrecemos una amplia gama de servicios de diseño para satisfacer todas tus
                         necesidades creativas. Desde el diseño gráfico hasta el desarrollo web, estamos aquí para
@@ -63,7 +65,8 @@
                     <h2>Nuestros servicios</h2>
                     <div class=" pb-5 col-lg-3 col-md-6 col-ms-6">
                         <div class="card">
-                            <img src="../assets/images/service_1.jpg" class="card-img-top" alt="Persona trabajando en computadora">
+                            <img src="../assets/images/service_1.jpg" class="card-img-top"
+                                alt="Persona trabajando en computadora">
                             <div class="card-body">
                                 <h5 class="card-title">Diseño Gráfico:</h5>
                                 <p class="card-text">Nuestro equipo de diseñadores gráficos expertos transformará tus
@@ -75,7 +78,8 @@
                     </div>
                     <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                         <div class="card">
-                            <img src="../assets/images/service_2.jpg" class="card-img-top" alt="Personas trabajando en un pintarron">
+                            <img src="../assets/images/service_2.jpg" class="card-img-top"
+                                alt="Personas trabajando en un pintarron">
                             <div class="card-body">
                                 <h5 class="card-title">Diseño de Logotipos:</h5>
                                 <p class="card-text">Crea una identidad visual única y memorable para tu marca con un
@@ -86,7 +90,8 @@
                     </div>
                     <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                         <div class="card">
-                            <img src="../assets/images/service_3.jpg" class="card-img-top" alt="Persona dibujando un logotipo">
+                            <img src="../assets/images/service_3.jpg" class="card-img-top"
+                                alt="Persona dibujando un logotipo">
                             <div class="card-body">
                                 <h5 class="card-title">Identidad de Marca:</h5>
                                 <p class="card-text">Desde el diseño de logotipos hasta la selección de colores y
@@ -98,7 +103,8 @@
                     </div>
                     <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                         <div class="card">
-                            <img src="../assets/images/service_4.jpg" class="card-img-top" alt="Persona diseñando una web">
+                            <img src="../assets/images/service_4.jpg" class="card-img-top"
+                                alt="Persona diseñando una web">
                             <div class="card-body">
                                 <h5 class="card-title">Diseño de Sitios Web:</h5>
                                 <p class="card-text">Desarrollamos sitios web personalizados y visualmente atractivos
@@ -111,7 +117,8 @@
                     </div>
                     <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                         <div class="card">
-                            <img src="../assets/images/service_5.jpg" class="card-img-top" alt="oficina con computadoras e imagenes de diseno">
+                            <img src="../assets/images/service_5.jpg" class="card-img-top"
+                                alt="oficina con computadoras e imagenes de diseno">
                             <div class="card-body">
                                 <h5 class="card-title">Desarrollo Web:</h5>
                                 <p class="card-text">Con nuestra experiencia en desarrollo web, creamos soluciones
@@ -124,7 +131,8 @@
                     </div>
                     <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                         <div class="card">
-                            <img src="../assets/images/service_6.jpg" class="card-img-top" alt="Persona trabajando en computadora">
+                            <img src="../assets/images/service_6.jpg" class="card-img-top"
+                                alt="Persona trabajando en computadora">
                             <div class="card-body">
                                 <h5 class="card-title">Diseño de Aplicaciones Móviles:</h5>
                                 <p class="card-text">Desde el concepto hasta la implementación, diseñamos aplicaciones
@@ -135,7 +143,8 @@
                     </div>
                     <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                         <div class="card">
-                            <img src="../assets/images/service_7.jpg" class="card-img-top" alt="Persona diseñando una aplicacion movil">
+                            <img src="../assets/images/service_7.jpg" class="card-img-top"
+                                alt="Persona diseñando una aplicacion movil">
                             <div class="card-body">
                                 <h5 class="card-title">Diseño de Interfaces de Usuario (UI):</h5>
                                 <p class="card-text"> Creamos interfaces de usuario elegantes y funcionales que
@@ -147,7 +156,8 @@
                     </div>
                     <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                         <div class="card">
-                            <img src="../assets/images/service_8.jpg" class="card-img-top" alt="Personas planeado una estrategia para ux">
+                            <img src="../assets/images/service_8.jpg" class="card-img-top"
+                                alt="Personas planeado una estrategia para ux">
                             <div class="card-body">
                                 <h5 class="card-title">Diseño de Experiencia de Usuario (UX):</h5>
                                 <p class="card-text">Enfocados en la satisfacción del usuario, diseñamos experiencias
