--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!--link boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>AV-Inicio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -94,7 +96,7 @@
         <section class="container mt-5 mb-5">
             <div class="row justify-conter-center align-items-center">
                 <div class="col-md-6 col-sm-12">
-                    <div class="">
+                    <div class="animate__animated animate__fadeInDown">
                         <h1>Bienvenido a AV agencia creativa</h1>
                         <P>Somos tu destino creativo para todo lo relacionado con diseño. Desde la conceptualización
                             hasta la implementación, estamos aquí para convertir tus ideas en realidad. Explora nuestro
