--- a/pages/about.html
+++ b/pages/about.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Diseño Gráfico, Folletos, Volantes, Carteles, Vallas publicitarias, Revistas, Libros, Packaging, Etiquetas, Ilustraciones, Personalizadas, Diseño de Logotipos, Rebranding, Identidad de Marca, Guías de estilo, Paleta de colores, Tipografías, Iconografía, Patrones, Tonos de comunicación, Voz de marca, Diseño de Sitios Web, Responsivos, Estáticos, Dinámicos, Adaptados a móviles, Comercio electrónico, Landing pages, Micrositios,Desarrollo Web, Programación , Codificación, Funcionalidades personalizadas, Optimización del rendimiento, Integración de APIs, Mantenimiento , Actualización continua, Diseño de Aplicaciones Móviles, Interfaces de usuario (UI), Prototipos, Wireframes, Iconos, Experiencias de usuario (UX), Pruebas de usabilidad, Optimización, Diseño de Interfaces de Usuario (UI), Diseños, intuitivos, Elementos de navegación,  Estructura de información, Prototipado, Implementación de principios de diseño
+    <meta name="keywords"
+        content="Diseño Gráfico, Folletos, Volantes, Carteles, Vallas publicitarias, Revistas, Libros, Packaging, Etiquetas, Ilustraciones, Personalizadas, Diseño de Logotipos, Rebranding, Identidad de Marca, Guías de estilo, Paleta de colores, Tipografías, Iconografía, Patrones, Tonos de comunicación, Voz de marca, Diseño de Sitios Web, Responsivos, Estáticos, Dinámicos, Adaptados a móviles, Comercio electrónico, Landing pages, Micrositios,Desarrollo Web, Programación , Codificación, Funcionalidades personalizadas, Optimización del rendimiento, Integración de APIs, Mantenimiento , Actualización continua, Diseño de Aplicaciones Móviles, Interfaces de usuario (UI), Prototipos, Wireframes, Iconos, Experiencias de usuario (UX), Pruebas de usabilidad, Optimización, Diseño de Interfaces de Usuario (UI), Diseños, intuitivos, Elementos de navegación,  Estructura de información, Prototipado, Implementación de principios de diseño
     Diseño de Experiencia de Usuario (UX), Investigación de usuarios, Mapas de experiencia, Arquitectura de la, información, Evaluación de la usabilidad, Iteración, Mejora continua">
     <!--link boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>AV-Nosotros</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -51,8 +53,8 @@
             <div class="container general_info">
 
                 <div class="  row justify-conter-center align-items-center">
-                   
-                    <div class="  col-md-6 col-sm-12 p-3">
+
+                    <div class="animate__animated animate__fadeInDown col-md-6 col-sm-12 p-3">
                         <h1>Nosotros</h1>
                         <h4>En Av creativos, nos apasiona el diseño en todas sus formas.</h4>
                         <p>
@@ -65,7 +67,7 @@
                         </p>
                     </div>
                     <div class=" hover_card p-3 col-md-6 col-sm-12">
-                        
+
                         <img src="../assets/images/about_bg.jpg" class="img-fluid"
                             alt="Personas trabajando ene una mesa">
                     </div>
