--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,8 @@
     <meta name="title" content="AV creativos">
     <meta name="description"
         content="Av creativos es un estudio de diseño que ofrece soluciones de diseño web, diseño de experiencia de usuario, diseño gráfico y branding a empresas medianas y pequeñas que requieren de aplicaciones, webs y diseño en general.">
-    <meta name="keywords" content="Diseño Gráfico, Folletos, Volantes, Carteles, Vallas publicitarias, Revistas, Libros, Packaging, Etiquetas, Ilustraciones, Personalizadas, Diseño de Logotipos, Rebranding, Identidad de Marca, Guías de estilo, Paleta de colores, Tipografías, Iconografía, Patrones, Tonos de comunicación, Voz de marca, Diseño de Sitios Web, Responsivos, Estáticos, Dinámicos, Adaptados a móviles, Comercio electrónico, Landing pages, Micrositios,Desarrollo Web, Programación , Codificación, Funcionalidades personalizadas, Optimización del rendimiento, Integración de APIs, Mantenimiento , Actualización continua, Diseño de Aplicaciones Móviles, Interfaces de usuario (UI), Prototipos, Wireframes, Iconos, Experiencias de usuario (UX), Pruebas de usabilidad, Optimización, Diseño de Interfaces de Usuario (UI), Diseños, intuitivos, Elementos de navegación,  Estructura de información, Prototipado, Implementación de principios de diseño
+    <meta name="keywords"
+        content="Diseño Gráfico, Folletos, Volantes, Carteles, Vallas publicitarias, Revistas, Libros, Packaging, Etiquetas, Ilustraciones, Personalizadas, Diseño de Logotipos, Rebranding, Identidad de Marca, Guías de estilo, Paleta de colores, Tipografías, Iconografía, Patrones, Tonos de comunicación, Voz de marca, Diseño de Sitios Web, Responsivos, Estáticos, Dinámicos, Adaptados a móviles, Comercio electrónico, Landing pages, Micrositios,Desarrollo Web, Programación , Codificación, Funcionalidades personalizadas, Optimización del rendimiento, Integración de APIs, Mantenimiento , Actualización continua, Diseño de Aplicaciones Móviles, Interfaces de usuario (UI), Prototipos, Wireframes, Iconos, Experiencias de usuario (UX), Pruebas de usabilidad, Optimización, Diseño de Interfaces de Usuario (UI), Diseños, intuitivos, Elementos de navegación,  Estructura de información, Prototipado, Implementación de principios de diseño
     Diseño de Experiencia de Usuario (UX), Investigación de usuarios, Mapas de experiencia, Arquitectura de la, información, Evaluación de la usabilidad, Iteración, Mejora continua">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -15,9 +16,10 @@
     <meta name="author" content="Av creativos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>AV-Contacto</title>
     <link rel="stylesheet" href="../css/style.css">
-    
+
 </head>
 
 <body>
@@ -55,7 +57,7 @@
     <main>
         <section class="contact_info container">
             <div class="row justify-conter-center align-items-center">
-                <div class="col-md-12 col-sm-12 col-lg-6 pb-5">
+                <div class="animate__animated animate__bounceInUp col-md-12 col-sm-12 col-lg-6 pb-5">
                     <h1>¿Listo para llevar tus proyectos al siguiente nivel?</h1>
                     <p>Nos encantaría escucharte! En Av creativos, estamos aquí para responder a todas tus
                         preguntas, discutir tus ideas y ayudarte a hacer realidad tus sueños creativos.
