--- a/pages/service_name.html
+++ b/pages/service_name.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Diseño Gráfico, Folletos, Volantes, Carteles, Vallas publicitarias, Revistas, Libros, Packaging, Etiquetas, Ilustraciones, Personalizadas, Diseño de Logotipos, Rebranding, Identidad de Marca, Guías de estilo, Paleta de colores, Tipografías, Iconografía, Patrones, Tonos de comunicación, Voz de marca, Diseño de Sitios Web, Responsivos, Estáticos, Dinámicos, Adaptados a móviles, Comercio electrónico, Landing pages, Micrositios,Desarrollo Web, Programación , Codificación, Funcionalidades personalizadas, Optimización del rendimiento, Integración de APIs, Mantenimiento , Actualización continua, Diseño de Aplicaciones Móviles, Interfaces de usuario (UI), Prototipos, Wireframes, Iconos, Experiencias de usuario (UX), Pruebas de usabilidad, Optimización, Diseño de Interfaces de Usuario (UI), Diseños, intuitivos, Elementos de navegación,  Estructura de información, Prototipado, Implementación de principios de diseño
+    <meta name="keywords"
+        content="Diseño Gráfico, Folletos, Volantes, Carteles, Vallas publicitarias, Revistas, Libros, Packaging, Etiquetas, Ilustraciones, Personalizadas, Diseño de Logotipos, Rebranding, Identidad de Marca, Guías de estilo, Paleta de colores, Tipografías, Iconografía, Patrones, Tonos de comunicación, Voz de marca, Diseño de Sitios Web, Responsivos, Estáticos, Dinámicos, Adaptados a móviles, Comercio electrónico, Landing pages, Micrositios,Desarrollo Web, Programación , Codificación, Funcionalidades personalizadas, Optimización del rendimiento, Integración de APIs, Mantenimiento , Actualización continua, Diseño de Aplicaciones Móviles, Interfaces de usuario (UI), Prototipos, Wireframes, Iconos, Experiencias de usuario (UX), Pruebas de usabilidad, Optimización, Diseño de Interfaces de Usuario (UI), Diseños, intuitivos, Elementos de navegación,  Estructura de información, Prototipado, Implementación de principios de diseño
     Diseño de Experiencia de Usuario (UX), Investigación de usuarios, Mapas de experiencia, Arquitectura de la, información, Evaluación de la usabilidad, Iteración, Mejora continua">
     <!--link boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>AV-servicios_web</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -62,7 +64,7 @@
                         <img src="https://storage.googleapis.com/cms-storage-bucket/a667e994fc2f3e85de36.png"
                             alt="Fast">
                     </video>
-                    <div class="col-sm-12">
+                    <div class=" animate__animated animate__bounceInUp col-sm-12">
                         <h2>¿Qué contienen nuestros servicios web ?</h2>
                         <p>Nuestros servicios web están diseñados para ofrecerte una presencia en línea impactante y
                             efectiva. Ya sea que necesites un sitio web informativo o una tienda en línea completa,
